--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+body {
+  font-family: 'Varela Round', sans-serif;
+  background-color: #17A589;
+}
+
+.header {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 50px;
+  background-color: rgba(255, 255, 255, 0.32);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.32);
+  color: white;
+  font-size: 30px;
+}
+
 .tarea {
   border: 1px solid coral;
+  background-color: white;
 }
 
 .blue{
@@ -9,5 +31,3 @@
 button {
   font-size: calc(10px + 2vmin);
 }
-
-
