Decimo commit - CSS para el calendario

--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,6 @@ h1::first-letter {
   background-color: rgba(255, 255, 255, 0.32);
 }
 
-.blue{
-  background-color: #61dafb;
-}
-
 .columna1{
   width: 49%;
   float: left;
@@ -47,17 +43,17 @@ h1::first-letter {
   border: 1px solid white;
 }
 
-
-.bloque {
+.bloque-botonera {
   display: block;
-  width: 100px;
+  width: min-content;
   border: 1px solid white;
+  margin: auto;
 }
 
 .icono {
   color: white;
-  margin: 5px;
-  font-size: 23px;
+  font-size: 30px;
+  border-radius: 3px;
 }
 .icono:hover{
   background-color: aquamarine;
@@ -90,9 +86,11 @@ h1::first-letter {
   font-size: 20px;
   font-family: 'Varela Round', sans-serif;
   border: none;
+  outline: none;
   margin: 0 50% 0 1%;
   border-radius: 5px;
 }
+
 
 h2 {
   font-size: 25px;
@@ -105,13 +103,111 @@ h2 {
   font-size: 25px;
   font-weight: bold;
   border-radius: 5px;
-  background-color: red;
+  background-color: #FF3936;
 }
-
-
 
 button {
   font-size: calc(10px + 2vmin);
   background-color: transparent;
   border: none;
+}
+
+.blue{
+  background-color: #61dafb;
+}
+
+
+/*CSS PARA EL CALENDARIO*/
+.react-calendar {
+  background: white;
+  border: 1px solid white;
+  border-radius: 15px;
+  color: black;
+}
+
+.react-calendar button {
+  margin: 0;
+  border: 0;
+  outline: none;
+  border-radius: 10px;
+}
+.react-calendar button:enabled:hover {
+  cursor: pointer;
+}
+.react-calendar__navigation button {
+  min-width: 44px;
+  background: none;
+}
+.react-calendar__navigation button:disabled {
+  background-color: #f0f0f0;
+}
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: #e6e6e6;
+}
+.react-calendar__month-view__weekdays {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.75em;
+}
+.react-calendar__month-view__weekdays__weekday {
+  padding: 0.5em;
+}
+.react-calendar__month-view__weekNumbers .react-calendar__tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+.react-calendar__month-view__days__day--weekend {
+  color: #d10000;
+}
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #757575;
+}
+.react-calendar__year-view .react-calendar__tile,
+.react-calendar__decade-view .react-calendar__tile,
+.react-calendar__century-view .react-calendar__tile {
+  padding: 2em 0.5em;
+}
+.react-calendar__tile {
+  max-width: 100%;
+  padding: 10px 6.6667px;
+  background: none;
+  text-align: center;
+  line-height: 16px;
+}
+.react-calendar__tile:disabled {
+  background-color: #f0f0f0;
+}
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  background-color: #e6e6e6;
+}
+.react-calendar__tile--now {
+  background: #ffffa9;
+}
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  background: #ffffa9;
+}
+.react-calendar__tile--hasActive {
+  background: #76baff;
+}
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+  background: #a9d4ff;
+}
+.react-calendar__tile--active {
+  background: #006edc;
+  color: white;
+}
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+  background: #1087ff;
+}
+.react-calendar--selectRange .react-calendar__tile--hover {
+  background-color: #e6e6e6;
 }
