--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,7 @@ button {
   border: 1px solid white;
   border-radius: 15px;
   color: black;
+  
 }
 
 .react-calendar button {
@@ -134,74 +135,45 @@ button {
 .react-calendar button:enabled:hover {
   cursor: pointer;
 }
-.react-calendar__navigation button {
-  min-width: 44px;
-  background: none;
-}
+
 .react-calendar__navigation button:disabled {
-  background-color: #f0f0f0;
+  background-color: #69D0A3;
 }
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: #69D0A3;
 }
-.react-calendar__month-view__weekdays {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 0.75em;
-}
-.react-calendar__month-view__weekdays__weekday {
-  padding: 0.5em;
-}
-.react-calendar__month-view__weekNumbers .react-calendar__tile {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.75em;
-  font-weight: bold;
-}
+
 .react-calendar__month-view__days__day--weekend {
-  color: #d10000;
+  color: #009D71;
 }
 .react-calendar__month-view__days__day--neighboringMonth {
   color: #757575;
 }
-.react-calendar__year-view .react-calendar__tile,
-.react-calendar__decade-view .react-calendar__tile,
-.react-calendar__century-view .react-calendar__tile {
-  padding: 2em 0.5em;
-}
-.react-calendar__tile {
-  max-width: 100%;
-  padding: 10px 6.6667px;
-  background: none;
-  text-align: center;
-  line-height: 16px;
-}
+
 .react-calendar__tile:disabled {
   background-color: #f0f0f0;
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: #69D0A3;
 }
 .react-calendar__tile--now {
-  background: #ffffa9;
+  background: #8ED;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
+  background: #8ED;
 }
 .react-calendar__tile--hasActive {
-  background: #76baff;
+  background: #009D71;
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
   background: #a9d4ff;
 }
 .react-calendar__tile--active {
-  background: #006edc;
+  background: #009D71;
   color: white;
 }
 .react-calendar__tile--active:enabled:hover,
