--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,14 @@ button {
 }
 
 
+.btn-tarea {
+  background-color: rgba(31, 38, 135, 0.32);
+  color: white;
+  border: 1px solid black;
+  margin: 0 auto;
+}
+
+
 /*CSS PARA EL CALENDARIO*/
 .react-calendar {
   background: white;
@@ -170,7 +178,7 @@ button {
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
+  background: #8ED;
 }
 .react-calendar__tile--active {
   background: #009D71;
@@ -178,8 +186,5 @@ button {
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
-}
-.react-calendar--selectRange .react-calendar__tile--hover {
-  background-color: #e6e6e6;
+  background: #009D71;
 }
