--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,7 @@ h1::first-letter {
   font-size: 30px;
 }
 
-.tarea {
-  border: 1px solid coral;
-  background-color: rgba(255, 255, 255, 0.32);
-}
+
 
 .columna1{
   width: 49%;
@@ -91,6 +88,18 @@ h1::first-letter {
   border-radius: 5px;
 }
 
+.lista-prioridades{
+  font-size: 20px;
+  font-family: 'Varela Round', sans-serif;
+  border: none;
+  outline: none;
+  margin: 0 50% 0 1%;
+  border-radius: 5px;
+}
+
+.derecha {
+  float: right;
+}
 
 h2 {
   font-size: 25px;
@@ -116,12 +125,20 @@ button {
   background-color: #61dafb;
 }
 
+.tarea {
+  margin: 10px;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.32);
+  box-shadow: 0 7px 15px 0 rgba(255, 255, 155, 0.32);
+  padding: 2px;
+}
 
 .btn-tarea {
-  background-color: rgba(31, 38, 135, 0.32);
   color: white;
   border: 1px solid black;
-  margin: 0 auto;
+  background-color: darkgray;
+  border-radius: 5px;
+  margin: 5px;
 }
 
 
